[gd_scene load_steps=2 format=3 uid="uid://0jm6p5dloekn"]

[ext_resource type="Script" path="res://tsp_main.gd" id="1_205di"]

[node name="TSP_Main" type="Node" node_paths=PackedStringArray("current_graph")]
script = ExtResource("1_205di")
current_graph = NodePath("Control/HSplitContainer/HSplitContainer/RightPanel/Graph")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HSplitContainer" type="HSplitContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="UI" type="Control" parent="Control/HSplitContainer"]
clip_contents = true
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="Control/HSplitContainer/UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.654902, 0.901961, 0.784314)

[node name="MarginContainer" type="MarginContainer" parent="Control/HSplitContainer/UI"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Control/HSplitContainer/UI/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/HSplitContainer/UI/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Traveling Salesman Problem"

[node name="BtnCreateGraph" type="Button" parent="Control/HSplitContainer/UI/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Create Graph
"

[node name="SpinBoxGraph" type="SpinBox" parent="Control/HSplitContainer/UI/MarginContainer/VBoxContainer"]
layout_mode = 2
max_value = 1.0
value = 1.0
alignment = 1

[node name="SpinBoxSize" type="SpinBox" parent="Control/HSplitContainer/UI/MarginContainer/VBoxContainer"]
layout_mode = 2
min_value = 3.0
max_value = 50.0
value = 5.0
alignment = 1

[node name="SpinBoxSeed" type="SpinBox" parent="Control/HSplitContainer/UI/MarginContainer/VBoxContainer"]
layout_mode = 2
max_value = 100000.0
value = 11.0
alignment = 1

[node name="HSeparator" type="HSeparator" parent="Control/HSplitContainer/UI/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="VisibilityEdgeweight" type="Button" parent="Control/HSplitContainer/UI/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Toggle Edgeweight Visibility"
flat = true

[node name="VisibilityEdge" type="Button" parent="Control/HSplitContainer/UI/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Toggle None-Tour Edges"
flat = true

[node name="HSeparator2" type="HSeparator" parent="Control/HSplitContainer/UI/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="BtnHandSolving" type="Button" parent="Control/HSplitContainer/UI/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Manual Solving"

[node name="HSeparator4" type="HSeparator" parent="Control/HSplitContainer/UI/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="BtnBruteForce" type="Button" parent="Control/HSplitContainer/UI/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Brute Force Algorithm (Naive Brute Force) "

[node name="HSeparator5" type="HSeparator" parent="Control/HSplitContainer/UI/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="BtnNearestNeighbor" type="Button" parent="Control/HSplitContainer/UI/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Nearest Neighbor Algorithm (Nearest Neighbor Heuristic)"

[node name="HSeparator6" type="HSeparator" parent="Control/HSplitContainer/UI/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="BtnGreedyHeuristicVariation" type="Button" parent="Control/HSplitContainer/UI/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Greedy Algorithm [Variation] (Greedy Heuristic)"

[node name="HSeparator7" type="HSeparator" parent="Control/HSplitContainer/UI/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="BtnMinimumSpanningTree" type="Button" parent="Control/HSplitContainer/UI/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Create Minimum Spanning Tree (Prim's Algorithm (Greedy Heuristic))"

[node name="Button" type="Button" parent="Control/HSplitContainer/UI/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Get Percentage"

[node name="Label2" type="Label" parent="Control/HSplitContainer/UI/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HSeparator8" type="HSeparator" parent="Control/HSplitContainer/UI/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="BtnLocalSearch2Opt" type="Button" parent="Control/HSplitContainer/UI/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Local Search: 2-Opt"

[node name="HSplitContainer" type="HSplitContainer" parent="Control/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="LeftPanel" type="Control" parent="Control/HSplitContainer/HSplitContainer"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3

[node name="ColorRect" type="ColorRect" parent="Control/HSplitContainer/HSplitContainer/LeftPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Control/HSplitContainer/HSplitContainer/LeftPanel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Left Panel"

[node name="Graph" type="Control" parent="Control/HSplitContainer/HSplitContainer/LeftPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label2" type="Label" parent="Control/HSplitContainer/HSplitContainer/LeftPanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -23.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40

[node name="RightPanel" type="Control" parent="Control/HSplitContainer/HSplitContainer"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3

[node name="ColorRect" type="ColorRect" parent="Control/HSplitContainer/HSplitContainer/RightPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Control/HSplitContainer/HSplitContainer/RightPanel"]
layout_mode = 0
offset_right = 88.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Right Panel"

[node name="Graph" type="Control" parent="Control/HSplitContainer/HSplitContainer/RightPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label2" type="Label" parent="Control/HSplitContainer/HSplitContainer/RightPanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -23.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40

[connection signal="pressed" from="Control/HSplitContainer/UI/MarginContainer/VBoxContainer/BtnCreateGraph" to="." method="_on_btn_create_graph_pressed"]
[connection signal="value_changed" from="Control/HSplitContainer/UI/MarginContainer/VBoxContainer/SpinBoxGraph" to="." method="_on_spin_box_graph_changed"]
[connection signal="value_changed" from="Control/HSplitContainer/UI/MarginContainer/VBoxContainer/SpinBoxSize" to="." method="_on_spin_box_size_changed"]
[connection signal="value_changed" from="Control/HSplitContainer/UI/MarginContainer/VBoxContainer/SpinBoxSeed" to="." method="_on_spin_box_seed_changed"]
[connection signal="pressed" from="Control/HSplitContainer/UI/MarginContainer/VBoxContainer/VisibilityEdgeweight" to="." method="_on_visibility_edgeweight_pressed"]
[connection signal="pressed" from="Control/HSplitContainer/UI/MarginContainer/VBoxContainer/VisibilityEdge" to="." method="_on_visibility_edge_pressed"]
[connection signal="pressed" from="Control/HSplitContainer/UI/MarginContainer/VBoxContainer/BtnHandSolving" to="." method="_on_btn_hand_solving_pressed"]
[connection signal="pressed" from="Control/HSplitContainer/UI/MarginContainer/VBoxContainer/BtnBruteForce" to="." method="_on_btn_brute_force_pressed"]
[connection signal="pressed" from="Control/HSplitContainer/UI/MarginContainer/VBoxContainer/BtnNearestNeighbor" to="." method="_on_btn_nearest_neighbor_pressed"]
[connection signal="pressed" from="Control/HSplitContainer/UI/MarginContainer/VBoxContainer/BtnGreedyHeuristicVariation" to="." method="_on_btn_greedy_heuristic_variation_pressed"]
[connection signal="pressed" from="Control/HSplitContainer/UI/MarginContainer/VBoxContainer/BtnMinimumSpanningTree" to="." method="_on_btn_minimum_spanning_tree_pressed"]
[connection signal="pressed" from="Control/HSplitContainer/UI/MarginContainer/VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Control/HSplitContainer/UI/MarginContainer/VBoxContainer/BtnLocalSearch2Opt" to="." method="_on_btn_local_search_2_opt_pressed"]
